--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,2 +1,2 @@
-<%#utiliza la vista parcial _form para evitar repetir condigo (DRY)%>
+<%#utiliza la vista parcial _form para evitar repetir codigo (DRY)%>
 <%= render "form", {action_name: "Crear"} %>
