--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>¡Hola Mundo!</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>¡Bienvenido a mi Blog realizado con Ruby On Rails!</h1>
+<p>Mi nombre es Carlos, mi pasión por la tecnología y la elaboración de Software me llevaron a estudiar Ing. en Sistemas en UTN-BA y son las que me llevan día a día a aprender diferentes metodologías, lenguajes y paradigmas para llevar a cabo variedad de proyectos referente a este apasionante mundo de la creación de Software.</p>
+
+<p>En esta oportunidad, para poner a prueba algunos de mis conocimientos sobre Ruby les traigo un Blog bastante simple cuyas características son:</p>
+<ul>
+	<li>Roles de usuarios (administrador, escritor, lector).</li>
+	<li>Artículos agrupados según categorías.</li>
+	<li>Control de artículos (pendientes de publicación, publicados).</li>	
+</ul>
