--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -49,6 +49,10 @@ a:active,
 a:hover {
   outline: 0;
 }
+a:link   
+{   
+ text-decoration:none !important;   
+}  
 abbr[title] {
   border-bottom: 1px dotted;
 }
