--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,32 +1,53 @@
-<h1><%=@article.title%></h1>
 <div>
 	<%= @article.body%>
 </div>
 <div>
-	<p>Creado por: 
-		<%if @article.user.nil?%> 
-			<%="Escritor Anonimo"%>
-		<%else%>
-			<%=@article.user.email%>
-		<%end%>
 	</br>
 	Visitas: <%= @article.visists_count%></p>
 </div>
 
-<div><%= link_to "Editar", edit_article_path(@article) %></div>
-<div><%= link_to "Eliminar", @article, method: :delete %></div>
+<%if user_signed_in?%>
+	<%if current_user.id == @article.user.id and @article.may_publish?%>
+	<%# Se puede Editar si es el usuario que escribió el articulo y si aún no fue publicado %>
+	<a href="<%=edit_article_path(@article)%>">
+		<div class="btn btn-edit form-group col-xs-4">
+			Editar
+		</div>
+	</a>
+	<%end%>
+	<%if current_user.is_admin? and @article.may_publish?%>
+	<%# Se puede Publicar sólo por usuarios administradores %>
+	<a rel="nofollow" data-method="put" href="<%="/articles/#{@article.id}/publish"%>">
+		<div class="btn btn-publish form-group col-xs-4">
+			Publicar
+		</div>
+	</a>
+	<%end%>
+	<%if (current_user.id == @article.user.id or current_user.is_admin?) and @article.may_publish?%>
+	<%# Se puede Eliminar si es el usuario que escribió el articulo o si es un usuario administrador, y si aún no fue publicado %>
+	<a rel="nofollow" data-method="delete" href="<%=article_path(@article)%>">
+		<div class="btn btn-delete form-group col-xs-4">
+			Eliminar
+		</div>
+	</a>
+	<%end%>
+<%end%>
 
+<br></br>
+<%if user_signed_in?%>
 <div>
-	<div class="hr grid_12"></div>
-	<h3>Comentarios</h3>
+	
+	<!--<h3>Comentarios</h3>-->
 	<%= render "comments/form" %>
 	<!-- muestra los comentarios asociados a este articulo -->
-	<ul id="comments-box">
+	<div id="comments-box">
 	<% @article.comments.each do |comment| %>
-		<li>
-			<%= comment.user.email %> dice: <br>
+		<blockquote>
+			<label><%= comment.user.email %> dice:</label><br>
 			<%= comment.body %>
-		</li>
+		</blockquote>
 	<%end%>
-	</ul>
+	</div>
+	
 </div>
+<%end%>
