--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CodeheroWeb</title>
+  <title>Mi Blog Personal</title>
+	  <!-- Custom Fonts -->
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div id="wrapper" class="container_12 clearfix">
-
-		<!-- Text Logo -->
-		<h1 id="logo" class="grid_4">Aurelius</h1>
-		
-		<!-- Navigation Menu -->
-		<%= render "partials/navigation" %>
-		
-		<div style="<%= "display: none;" if notice.nil? and alert.nil? %>">
-			<%= notice %> <%= alert %>
-		</div>
-
-		<%= yield %>
-    
+	<!-- Navigation Menu -->
+	<%= render "partials/navigation" %>
+	
+	<div style="<%= "display: none;" if notice.nil? and alert.nil? %>">
+		<%= notice %> <%= alert %>
 	</div>
+    
+    <!-- Main Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	
+			<%= yield %>
+
+			</div>
+        </div>
+    </div>
+    
+	<!-- Footer -->
+	<%= render "partials/footer" %>
 </body>
 </html>
